homelab/authorizationPolicy/secure-authc/sleep.yml
apiVersion: v1
kind: Namespace
metadata:
  name: curl
---
apiVersion: v1
kind: Service
metadata:
  name: sleep
  namespace: curl
  labels:
    app: sleep
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sleep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: quay.io/redhattraining/ossm-curl:1.0
        imagePullPolicy: Always
