homelab/authorizationPolicy/secure-authc/customer-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: get-customer
  namespace: secure-authc
spec:
  selector:
    matchLabels:
      app: customer
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
    to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
